# RetroBox

./: .gitignore  .gitmodules  build-win.bat  build.sh  clean.bat  readme.md  run-win.bat
src/: CMakeLists.txt
src/app/: CMakeLists.txt  appdata.hpp  main.cpp
src/app/core/: CMakeLists.txt  utils.cpp
src/app/core/argparser/: argparser.cpp  argparser.hpp
src/app/core/audio/: audio.hpp
src/app/core/header/: appdata.hpp  core.hpp
src/app/core/input/: input.cpp  input.hpp
src/app/core/locale/: locale.cpp  locale.hpp
src/app/core/locale/languages/: en_EN.hpp  ro_RO.hpp
src/app/core/states/: state.hpp  statemanager.cpp  statemanager.hpp
src/app/core/timer/: timer.cpp  timer.hpp
src/app/core/window/: window.cpp  window.hpp
src/app/core/window/renderer/: renderer.cpp  renderer.hpp
src/app/emulators/: CMakeLists.txt
src/app/emulators/bytepusher/: CMakeLists.txt  emulator.cpp
src/app/emulators/bytepusher/VM/: vm.cpp  vm.hpp
src/app/emulators/bytepusher/header/: bytepusher.hpp
src/app/emulators/bytepusher/state/: state.cpp  state.hpp
src/app/emulators/chip8/: CMakeLists.txt  emulator.cpp
src/app/emulators/chip8/cpu/: cpu.hpp  interpreter.cpp  interpreter.hpp
src/app/emulators/chip8/header/: chip8.hpp
src/app/emulators/chip8/state/: state.cpp  state.hpp
src/app/emulators/headers/: emulators.hpp
src/app/rendering/: CMakeLists.txt
src/app/rendering/window/: window.cpp  window.hpp
src/app/states/: CMakeLists.txt
src/app/states/boot/: boot.cpp  boot.hpp
src/app/states/headers/: states.hpp
